[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pic/123.bg.png" type="Texture" id=2]
[ext_resource path="res://pic/google.png" type="Texture" id=3]
[ext_resource path="res://fonts/font1.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/font3.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/style重新註冊.tres" type="StyleBox" id=7]
[ext_resource path="res://script/1.1.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.737255, 0.870588, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.952941, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 22
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=9]
size = 27
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.372549, 0.698039, 0.988235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.372549, 0.698039, 0.988235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.372549, 0.698039, 0.988235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 25
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
font_data = ExtResource( 1 )

[node name="Node2D2" type="Node2D"]
scale = Vector2( 1, 1.00142 )
script = ExtResource( 8 )

[node name="BackgroundPicture" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true

[node name="BackGroundControl" type="Panel" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -410.921
margin_right = 284.0
margin_bottom = 299.079
custom_styles/panel = SubResource( 5 )

[node name="GoogleButton" type="Button" parent="BackgroundPicture/BackGroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = 176.626
margin_right = 419.0
margin_bottom = 350.626
rect_scale = Vector2( 0.7, 0.7 )
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="UserNameLineEdit" type="LineEdit" parent="BackgroundPicture/BackGroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -213.464
margin_right = 220.0
margin_bottom = -153.464
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Email Address"
placeholder_alpha = 0.349

[node name="PasswordLineEdit" type="LineEdit" parent="BackgroundPicture/BackGroundControl"]
margin_left = 64.0
margin_top = 216.43
margin_right = 504.0
margin_bottom = 276.43
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Password"
placeholder_alpha = 0.349

[node name="ForgetButton" type="Button" parent="BackgroundPicture/BackGroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -64.4319
margin_right = 92.0
margin_bottom = -31.4319
custom_colors/font_color_disabled = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.0156863, 1, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "Forgot Password？"

[node name="RegisterButton" type="Button" parent="BackgroundPicture/BackGroundControl"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 231.0
margin_top = -298.847
margin_right = 321.0
margin_bottom = -254.847
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "Sign up"

[node name="EnterButton" type="Button" parent="BackgroundPicture/BackGroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.0
margin_top = -4.7601
margin_right = 217.0
margin_bottom = 43.2399
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "enter"
icon_align = 1

[node name="login" type="Label" parent="BackgroundPicture/BackGroundControl"]
margin_left = 69.0
margin_top = 62.6483
margin_right = 180.0
margin_bottom = 114.648
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Sign in"

[node name="no account" type="Label" parent="BackgroundPicture/BackGroundControl"]
margin_left = 70.0
margin_top = 425.987
margin_right = 223.0
margin_bottom = 452.987
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "No Account？"

[node name="or" type="Label" parent="BackgroundPicture/BackGroundControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.5
margin_top = 132.293
margin_right = 167.5
margin_bottom = 159.293
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "------------------  or  ------------------"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackgroundPicture/BackGroundControl/GoogleButton" to="." method="_on_google_pressed"]
[connection signal="pressed" from="BackgroundPicture/BackGroundControl/ForgetButton" to="." method="_on_forget_pressed"]
[connection signal="pressed" from="BackgroundPicture/BackGroundControl/RegisterButton" to="." method="_on_register_pressed"]
[connection signal="pressed" from="BackgroundPicture/BackGroundControl/EnterButton" to="." method="_on_enter_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
